--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
     
     </body>
 
-    <footer>All rights reserved</footer>
+    <footer>All rights reserved 2023(c)</footer>
     
     </html>
